<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/home_fragment_scene"
            tools:context=".presentation.features.homeActivity.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="@dimen/padding_margin_micro"
            android:background="?colorPrimary"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/padding_margin_micro"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/edit_text_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/padding_margin_normal"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_search_24"
                    android:drawablePadding="@dimen/padding_margin_small"
                    android:focusable="false"
                    android:transitionName="query"
                    android:hint="@string/hint_search_product"
                    android:inputType="text" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_view_container"
                tools:listitem="@layout/item_product" />

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>


</layout>