...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp" >

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    tools:background="@color/grey"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
